--- a/src/main/resources/templates/layout/Footer.html
+++ b/src/main/resources/templates/layout/Footer.html
@@ -8,6 +8,7 @@
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css"/>
     </noscript>
+    <script></script>
 </head>
 <body>
 
