--- a/src/main/resources/templates/myPageShop.html
+++ b/src/main/resources/templates/myPageShop.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
             crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
     <!--    마이페이지로 세션 값 없이 바로 접근시 처리하기 위한 스크립트-->
     <script th:inline="javascript">
@@ -20,6 +21,8 @@
         }
         /*]]>*/
     </script>
+    <!--    예약목록을 바로 인식하지 못해서 새로고침 해줌-->
+
 </head>
 
 <body>
@@ -119,6 +122,21 @@
                                 </div>
                             </div>
 
+                            <!-- 사업자 등록번호  -->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="shopBusiness" class="col-form-label">사업자 등록 번호</label>
+                                    </div>
+                                    <!--  회원 phone / 텍스트 뷰 라벨 -->
+                                    <div class="col-10">
+                                        <input id="shopBusiness" class="form-control" type="tel"
+                                               th:value="${session.shop.shopBusiness}"
+                                               readonly>
+                                    </div>
+                                </div>
+                            </div>
+
                             <!--                            우편번호-->
                             <div class="text-center">
                                 <div class="row g-3 p-3">
@@ -210,23 +228,6 @@
                                 </div>
                             </div>
 
-                            <!--                            원장 성별-->
-                            <div class="text-center">
-                                <div class="row g-3 p-3">
-                                    <div class="col-2">
-                                        <label for="ownerGen" class="col-form-label">성별</label>
-                                    </div>
-                                    <div class="col-10">
-                                        <!-- M일때는 남자, F일때는 여자-->
-                                        <input id="ownerGen" class="form-control" type="text"
-                                               th:if="${session.shop.ownerGen} =='M' " value="남자" readonly>
-                                        <input id="ownerGen" class="form-control" type="text"
-                                               th:if="${session.shop.ownerGen} =='F' " value="여자" readonly>
-                                    </div>
-                                </div>
-                            </div>
-
-
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">
                                 <button class="btn btn-outline-dark me-md-2" type="button"
                                         onclick="location.href='/myPageShopUpdate'">수정
@@ -241,12 +242,13 @@
                         <div class="tab-pane fade show" id="nav-apoint" role="tabpanel"
                              aria-labelledby="nav-apoint-tab" tabinde>
                             <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
-                                예약 내역
+                                예약 목록
                             </div>
                             <table th:if="${session.apoints} != null" class="table">
                                 <thead class="table-dark">
                                 <tr>
-                                    <th>지점</th>
+                                    <th>이용자</th>
+                                    <th>이용자 번호</th>
                                     <th>디자이너</th>
                                     <th>컷</th>
                                     <th>펌</th>
@@ -258,18 +260,18 @@
                                 </thead>
                                 <tbody class="table-striped">
                                 <tr th:each="apointsList:${session.apoints}">
-                                    <td th:text="${apointsList.apointShop}"></td>
+                                    <td th:text="${apointsList.apointUserName}"></td>
+                                    <td th:text="${apointsList.apointUserPh}"></td>
                                     <td th:text="${apointsList.apointDesigner}"></td>
                                     <td th:text="${apointsList.apointCut}"></td>
                                     <td th:text="${apointsList.apointPerm}"></td>
                                     <td th:text="${apointsList.apointColor}"></td>
-                                    <td th:text="${apointsList.apointClinic}"></td>
                                     <td th:text="${apointsList.apointDate}"></td>
                                     <td th:text="${apointsList.apointTime}"></td>
                                 </tr>
                                 </tbody>
                             </table>
-                            <h2 th:if="${session.apoints} == null">조회된 예약내역이 없습니다.</h2>
+                            <h2 th:if="${session.apoints} == null">조회된 예약목록이 없습니다.</h2>
                         </div>
                     </div>
                 </div>
