--- a/src/main/resources/templates/myPageShopUpdate.html
+++ b/src/main/resources/templates/myPageShopUpdate.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+
     <script>
         $(document).ready(function () {
             $("#btn-back").on("click", function () {
@@ -13,6 +14,23 @@
             });
         });
     </script>
+    <style>
+        span {
+            display: none;
+        }
+
+        .ok {
+            color: green;
+        }
+
+        .no {
+            color: red;
+        }
+    </style>
+
+    <!--    유효성 검사 및 중복체크를 위한 자바스크립트-->
+    <script type="text/javascript" src="useJs/shopUpdate.js"></script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </head>
 <body>
 <main>
@@ -36,7 +54,8 @@
                                     </div>
                                     <!--  Shop 아이디 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="shopId" name="shopId" class="form-control" type="text" value="ID 보여질 곳"
+                                        <input id="shopId" name="shopId" class="form-control" type="text"
+                                               value="ID 보여질 곳"
                                                th:value="${session.shop.shopId}" readonly>
                                     </div>
                                 </div>
@@ -50,8 +69,12 @@
                                     </div>
                                     <!--  Shop Pw / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="shopPw" name="shopPw" class="form-control" type="text"
-                                               th:value="${session.shop.shopPw}" value="PW 보여질 곳" readonly>
+                                        <input id="shopPw" name="shopPw" class="form-control" type="text" onclick="checkPw()" onchange="checkPw()"
+                                               th:value="${session.shop.shopPw}" value="PW 보여질 곳">
+                                        <span class="pwd_ok ok">사용 가능한 비밀번호입니다.</span>
+                                        <span class="pwd_not no">8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.</span>
+                                        <span class="pwd_space no">비밀번호는 공백 없이 입력해주세요.</span>
+                                        <span class="checkPw no">필수 항목입니다.</span>
                                     </div>
                                 </div>
                             </div>
@@ -64,8 +87,10 @@
                                     </div>
                                     <!--  가게 이름 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="shopName" name="shopName" class="form-control" type="text" value="이름 보여질 곳"
+                                        <input id="shopName" name="shopName" class="form-control" type="text" onclick="checkShopName()" onchange="checkShopName()"
+                                               value="이름 보여질 곳"
                                                th:value="${session.shop.shopName}">
+                                        <span class="checkShopName no">필수 항목입니다.</span>
                                     </div>
                                 </div>
                             </div>
@@ -76,63 +101,64 @@
                                     <div class="col-2">
                                         <label for="shopTel" class="col-form-label">가게 번호</label>
                                     </div>
-                                    <!--  회원 phone / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="shopTel" name="shopTel" class="form-control" type="tel"
-                                               th:value="${session.shop.shopTel}"
-                                               readonly>
+                                        <input id="shopTel" name="shopTel" class="form-control" type="tel" onclick="checkShopTel()" onchange="checkShopTel()"
+                                               th:value="${session.shop.shopTel}">
+                                        <span class="tel_ok ok">사용 가능한 전화번호입니다.</span>
+                                        <span class="tel_already no">이미 사용중인 전화번호입니다.</span>
+                                        <span class="tel_not no">잘못된 전화번호입니다.</span>
+                                        <span class="checkTel no">필수 항목입니다.</span>
                                     </div>
                                 </div>
                             </div>
 
-                            <!--                            우편번호-->
-                            <div class="text-center">
-                                <div class="row g-3 p-3">
-                                    <div class="col-2">
-                                        <label for="shopAddrNum" class="col-form-label">우편번호</label>
+                            <!-- 주소 -->
+                            <div class="row mb-3 mx-auto">
+                                <div class="row align-items-center p-2">
+                                    <div class="col-2 text-center">
+                                        <label for="shopAddrNum" onkeyup="checkAddress()" onchange="checkAddress()"
+                                               class="col-form-label"> Addr </label>
                                     </div>
-                                    <!--  회원 Email / 텍스트 뷰 라벨 -->
-                                    <div class="col-10">
-                                        <input id="shopAddrNum" name="shopAddrNum" class="form-control" type="text"
-                                               th:value="${session.shop.shopAddrNum}" value="우편번호" readonly>
+                                    <div class="col-7">
+                                        <input id="shopAddrNum" name="shopAddrNum" type="text" class="form-control"
+                                               th:value="${session.shop.shopAddrNum}"
+                                               placeholder="우편번호" readonly>
+                                        <span class="checkAddr no">필수 항목입니다.</span>
                                     </div>
-                                </div>
-                            </div>
-                            <!-- 신주소  -->
-                            <div class="text-center">
-                                <div class="row g-3 p-3">
-                                    <div class="col-2">
-                                        <label for="shopAddrRoad" class="col-form-label">신주소</label>
-                                    </div>
-                                    <div class="col-10">
-                                        <input id="shopAddrRoad" name="shopAddrRoad"class="form-control" type="text"
-                                               th:value="${session.shop.shopAddrRoad}" value="신주소" readonly>
+                                    <div class="col-1">
+                                        <input id="addrBtn" type="button" class="btn btn-outline-danger"
+                                               onclick="addressGet(); checkAddress()" value="주소 찾기">
                                     </div>
                                 </div>
-                            </div>
-
-                            <!--                            구주소-->
-                            <div class="text-center">
-                                <div class="row g-3 p-3">
-                                    <div class="col-2">
-                                        <label for="shopAddrJibun" class="col-form-label">구주소</label>
+                                <div class="row align-items-center p-2">
+                                    <div class="col-2 text-center">
+                                        <label for="shopAddrJibun" class="col-form-label">지번 주소 </label>
                                     </div>
                                     <div class="col-10">
-                                        <input id="shopAddrJibun" name="shopAddrJibun" class="form-control" type="text"
-                                               th:value="${session.shop.shopAddrJibun}" value="구주소" readonly>
+                                        <input id="shopAddrJibun" name="shopAddrJibun" type="text" class="form-control"
+                                               th:value="${session.shop.shopAddrJibun}"
+                                               placeholder="지번 주소" readonly>
                                     </div>
                                 </div>
-                            </div>
-
-                            <!--                            상세주소-->
-                            <div class="text-center">
-                                <div class="row g-3 p-3">
-                                    <div class="col-2">
-                                        <label for="shopAddrDetail" class="col-form-label">상세주소</label>
+                                <div class="row align-items-center p-2">
+                                    <div class="col-2 text-center">
+                                        <label for="shopAddrRoad" class="col-form-label"> 도로명 주소 </label>
                                     </div>
                                     <div class="col-10">
-                                        <input id="shopAddrDetail" name="shopAddrDetail" class="form-control" type="text"
-                                               th:value="${session.shop.shopAddrDetail}" value="상세주소" readonly>
+                                        <input id="shopAddrRoad" name="shopAddrRoad" type="text" class="form-control"
+                                               th:value="${session.shop.shopAddrRoad}"
+                                               placeholder="도로명 주소" readonly>
+                                    </div>
+                                </div>
+                                <div class="row align-items-center p-2">
+                                    <div class="col-2 text-center">
+                                        <label for="shopAddrDetail" class="col-form-label"> 상세주소</label>
+                                    </div>
+                                    <div class="col-10">
+                                        <input id="shopAddrDetail" name="shopAddrDetail" type="text"
+                                               th:value="${session.shop.shopAddrDetail}"
+                                               class="form-control"
+                                               placeholder="상세 주소">
                                     </div>
                                 </div>
                             </div>
@@ -144,8 +170,9 @@
                                         <label for="ownerName" class="col-form-label">원장 명</label>
                                     </div>
                                     <div class="col-10">
-                                        <input id="ownerName" name="ownerName" class="form-control" type="text"
+                                        <input onclick="checkName()" onchange="checkName()" id="ownerName" name="ownerName" class="form-control" type="text"
                                                th:value="${session.shop.ownerName}" value="원장명">
+                                        <span class="checkName no">필수 항목입니다.</span>
                                     </div>
                                 </div>
                             </div>
@@ -157,8 +184,12 @@
                                         <label for="ownerPh" class="col-form-label">휴대폰 번호</label>
                                     </div>
                                     <div class="col-10">
-                                        <input id="ownerPh" name="ownerPh" class="form-control" type="text"
-                                               th:value="${session.shop.ownerPh}" value="휴대폰 번호" readonly>
+                                        <input onclick="checkPh()" onchange="checkPh()" id="ownerPh" name="ownerPh" class="form-control" type="text"
+                                               th:value="${session.shop.ownerPh}" value="휴대폰 번호">
+                                        <span class="ph_ok ok">사용 가능한 전화번호입니다.</span>
+                                        <span class="ph_already no">이미 사용중인 전화번호입니다.</span>
+                                        <span class="ph_not no">잘못된 전화번호입니다.</span>
+                                        <span class="checkPh no">필수 항목입니다.</span>
                                     </div>
                                 </div>
                             </div>
@@ -170,31 +201,44 @@
                                         <label for="ownerMail" class="col-form-label">메일</label>
                                     </div>
                                     <div class="col-10">
-                                        <input id="ownerMail" name="ownerMail" class="form-control" type="text"
-                                               th:value="${session.shop.ownerMail}" value="원장 메일" readonly>
+                                        <input onclick="checkMail()" onchange="checkMail()" id="ownerMail"
+                                               name="ownerMail" class="form-control" type="text"
+                                               th:value="${session.shop.ownerMail}" value="원장 메일">
+                                        <span class="mail_ok ok">사용 가능한 이메일입니다.</span>
+                                        <span class="mail_already no">이미 사용중인 이메일입니다.</span>
+                                        <span class="mail_not no">잘못된 이메일입니다.</span>
+                                        <span class="checkMail no">필수 항목입니다.</span>
                                     </div>
                                 </div>
                             </div>
 
-                            <!--                            원장 성별-->
-                            <div class="text-center">
-                                <div class="row g-3 p-3">
-                                    <div class="col-2">
-                                        <label for="ownerGen" class="col-form-label">성별</label>
+                            <div class="form-floating mb-3">
+                                <div class="row">
+                                    <div class="col-2"></div>
+                                    <div class="col-6">
+                                        <input disabled type="text" class="form-control" id="ownerWord" placeholder=" "
+                                               onclick="checkWord()"
+                                               onchange="checkWord()">
+                                        <label for="ownerWord" class="text-secondary opacity-40" onclick="checkWord()"
+                                               onchange="checkWord()">인증번호를 입력해 주세요</label>
                                     </div>
-                                    <div class="col-10">
-                                        <!-- M일때는 남자, F일때는 여자-->
-                                        <input id="ownerGen" name="ownerGen" class="form-control" type="text"
-                                               th:if="${session.shop.ownerGen} =='M' " value="남자" readonly>
-                                        <input id="ownerGen" name="ownerGen" class="form-control" type="text"
-                                               th:if="${session.shop.ownerGen} =='F' " value="여자" readonly>
+                                    <div class="col-4">
+                                        <label class="text-secondary opacity-50"> </label>
+                                        <button type="button" id="btn-sendMail" disabled onclick="sendMail()"
+                                                class="btn btn-outline-dark">인증번호 발송
+                                        </button>
+                                        <span class="word_ok ok">인증되었습니다.</span>
+                                        <span class="word_not no">틀린 인증번호입니다.</span>
+                                        <span class="checkWord no">필수 항목입니다.</span>
                                     </div>
+                                    <!--                        처리결과 뜨는 span-->
+
                                 </div>
                             </div>
-
 
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">
-                                <button id="btn-update" class="btn btn-outline-dark me-md-2" type="submit">수정 완료</button>
+                                <button id="btn-update" onclick="checkAll()" class="btn btn-outline-dark me-md-2" type="submit">수정 완료
+                                </button>
                                 <button id="btn-back" class="btn btn-outline-dark me-md-2" type="button">취소</button>
                             </div>
                         </div>
